testsuite/tests/properties/invalid_prop_def/correct.lkt
import common

class BarNode: FooNode {
    @exported fun prop(): Bool = true
}
